[gd_scene load_steps=170 format=2]

[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending3.png" type="Texture2D" id=1]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending8.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending11.png" type="Texture2D" id=3]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending13.png" type="Texture2D" id=4]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending15.png" type="Texture2D" id=5]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending19.png" type="Texture2D" id=6]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending22.png" type="Texture2D" id=7]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending5.png" type="Texture2D" id=8]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending7.png" type="Texture2D" id=9]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending17.png" type="Texture2D" id=10]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending18.png" type="Texture2D" id=11]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending24.png" type="Texture2D" id=12]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending26.png" type="Texture2D" id=13]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending27.png" type="Texture2D" id=14]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending10.png" type="Texture2D" id=15]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending14.png" type="Texture2D" id=16]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending20.png" type="Texture2D" id=17]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending23.png" type="Texture2D" id=18]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending25.png" type="Texture2D" id=19]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending6.png" type="Texture2D" id=20]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending4.png" type="Texture2D" id=21]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending9.png" type="Texture2D" id=22]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending12.png" type="Texture2D" id=23]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending1.png" type="Texture2D" id=24]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending16.png" type="Texture2D" id=25]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending21.png" type="Texture2D" id=26]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending2.png" type="Texture2D" id=27]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending30.png" type="Texture2D" id=28]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending28.png" type="Texture2D" id=29]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending29.png" type="Texture2D" id=30]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending33.png" type="Texture2D" id=31]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending31.png" type="Texture2D" id=32]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending32.png" type="Texture2D" id=33]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending88.png" type="Texture2D" id=34]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending76.png" type="Texture2D" id=35]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending80.png" type="Texture2D" id=36]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending82.png" type="Texture2D" id=37]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending83.png" type="Texture2D" id=38]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending86.png" type="Texture2D" id=39]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending74.png" type="Texture2D" id=40]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending77.png" type="Texture2D" id=41]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending79.png" type="Texture2D" id=42]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending89.png" type="Texture2D" id=43]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending75.png" type="Texture2D" id=44]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending90.png" type="Texture2D" id=45]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending78.png" type="Texture2D" id=46]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending81.png" type="Texture2D" id=47]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending84.png" type="Texture2D" id=48]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending85.png" type="Texture2D" id=49]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending87.png" type="Texture2D" id=50]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending104.png" type="Texture2D" id=51]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending103.png" type="Texture2D" id=52]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending102.png" type="Texture2D" id=53]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending105.png" type="Texture2D" id=54]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending106.png" type="Texture2D" id=55]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending107.png" type="Texture2D" id=56]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending108.png" type="Texture2D" id=57]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending109.png" type="Texture2D" id=58]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending166.png" type="Texture2D" id=59]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending119.png" type="Texture2D" id=60]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending167.png" type="Texture2D" id=61]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending151.png" type="Texture2D" id=62]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending129.png" type="Texture2D" id=63]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending148.png" type="Texture2D" id=64]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending136.png" type="Texture2D" id=65]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending143.png" type="Texture2D" id=66]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending115.png" type="Texture2D" id=67]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending160.png" type="Texture2D" id=68]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending128.png" type="Texture2D" id=69]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending131.png" type="Texture2D" id=70]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending110.png" type="Texture2D" id=71]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending113.png" type="Texture2D" id=72]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending159.png" type="Texture2D" id=73]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending132.png" type="Texture2D" id=74]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending161.png" type="Texture2D" id=75]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending134.png" type="Texture2D" id=76]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending120.png" type="Texture2D" id=77]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending121.png" type="Texture2D" id=78]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending122.png" type="Texture2D" id=79]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending117.png" type="Texture2D" id=80]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending111.png" type="Texture2D" id=81]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending138.png" type="Texture2D" id=82]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending141.png" type="Texture2D" id=83]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending124.png" type="Texture2D" id=84]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending144.png" type="Texture2D" id=85]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending145.png" type="Texture2D" id=86]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending146.png" type="Texture2D" id=87]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending153.png" type="Texture2D" id=88]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending133.png" type="Texture2D" id=89]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending112.png" type="Texture2D" id=90]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending150.png" type="Texture2D" id=91]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending157.png" type="Texture2D" id=92]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending135.png" type="Texture2D" id=93]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending118.png" type="Texture2D" id=94]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending116.png" type="Texture2D" id=95]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending125.png" type="Texture2D" id=96]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending126.png" type="Texture2D" id=97]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending139.png" type="Texture2D" id=98]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending140.png" type="Texture2D" id=99]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending123.png" type="Texture2D" id=100]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending152.png" type="Texture2D" id=101]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending147.png" type="Texture2D" id=102]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending154.png" type="Texture2D" id=103]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending155.png" type="Texture2D" id=104]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending137.png" type="Texture2D" id=105]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending156.png" type="Texture2D" id=106]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending114.png" type="Texture2D" id=107]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending130.png" type="Texture2D" id=108]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending162.png" type="Texture2D" id=109]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending163.png" type="Texture2D" id=110]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending158.png" type="Texture2D" id=111]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending164.png" type="Texture2D" id=112]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending127.png" type="Texture2D" id=113]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending149.png" type="Texture2D" id=114]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending165.png" type="Texture2D" id=115]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending142.png" type="Texture2D" id=116]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending96.png" type="Texture2D" id=117]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending98.png" type="Texture2D" id=118]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending92.png" type="Texture2D" id=119]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending93.png" type="Texture2D" id=120]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending99.png" type="Texture2D" id=121]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending95.png" type="Texture2D" id=122]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending91.png" type="Texture2D" id=123]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending97.png" type="Texture2D" id=124]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending94.png" type="Texture2D" id=125]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending100.png" type="Texture2D" id=126]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending101.png" type="Texture2D" id=127]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending46.png" type="Texture2D" id=128]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending40.png" type="Texture2D" id=129]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending48.png" type="Texture2D" id=130]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending49.png" type="Texture2D" id=131]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending50.png" type="Texture2D" id=132]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending41.png" type="Texture2D" id=133]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending51.png" type="Texture2D" id=134]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending52.png" type="Texture2D" id=135]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending39.png" type="Texture2D" id=136]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending53.png" type="Texture2D" id=137]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending44.png" type="Texture2D" id=138]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending38.png" type="Texture2D" id=139]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending47.png" type="Texture2D" id=140]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending43.png" type="Texture2D" id=141]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending37.png" type="Texture2D" id=142]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending42.png" type="Texture2D" id=143]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending45.png" type="Texture2D" id=144]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending34.png" type="Texture2D" id=145]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending36.png" type="Texture2D" id=146]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending35.png" type="Texture2D" id=147]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending56.png" type="Texture2D" id=148]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending58.png" type="Texture2D" id=149]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending59.png" type="Texture2D" id=150]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending57.png" type="Texture2D" id=151]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending64.png" type="Texture2D" id=152]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending68.png" type="Texture2D" id=153]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending66.png" type="Texture2D" id=154]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending69.png" type="Texture2D" id=155]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending70.png" type="Texture2D" id=156]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending62.png" type="Texture2D" id=157]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending54.png" type="Texture2D" id=158]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending61.png" type="Texture2D" id=159]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending65.png" type="Texture2D" id=160]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending67.png" type="Texture2D" id=161]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending71.png" type="Texture2D" id=162]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending72.png" type="Texture2D" id=163]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending73.png" type="Texture2D" id=164]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending55.png" type="Texture2D" id=165]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending63.png" type="Texture2D" id=166]
[ext_resource path="res://Assets/Animated Scenes/Basic Ending/Basic_Ending60.png" type="Texture2D" id=167]
[ext_resource path="res://Scenes/Ending.gd" type="Script" id=168]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 27 ), ExtResource( 1 ), ExtResource( 21 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 9 ), ExtResource( 2 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 3 ), ExtResource( 23 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 25 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 6 ), ExtResource( 17 ), ExtResource( 26 ), ExtResource( 7 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 31 ), ExtResource( 145 ), ExtResource( 147 ), ExtResource( 146 ), ExtResource( 142 ), ExtResource( 139 ), ExtResource( 136 ), ExtResource( 129 ), ExtResource( 133 ), ExtResource( 143 ), ExtResource( 141 ), ExtResource( 138 ), ExtResource( 144 ), ExtResource( 128 ), ExtResource( 140 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 137 ), ExtResource( 158 ), ExtResource( 165 ), ExtResource( 148 ), ExtResource( 151 ), ExtResource( 149 ), ExtResource( 150 ), ExtResource( 167 ), ExtResource( 159 ), ExtResource( 157 ), ExtResource( 166 ), ExtResource( 152 ), ExtResource( 160 ), ExtResource( 154 ), ExtResource( 161 ), ExtResource( 153 ), ExtResource( 155 ), ExtResource( 156 ), ExtResource( 162 ), ExtResource( 163 ), ExtResource( 164 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 35 ), ExtResource( 41 ), ExtResource( 46 ), ExtResource( 42 ), ExtResource( 36 ), ExtResource( 47 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 39 ), ExtResource( 50 ), ExtResource( 34 ), ExtResource( 43 ), ExtResource( 45 ), ExtResource( 123 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 125 ), ExtResource( 122 ), ExtResource( 117 ), ExtResource( 124 ), ExtResource( 118 ), ExtResource( 121 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 71 ), ExtResource( 81 ), ExtResource( 90 ), ExtResource( 72 ), ExtResource( 107 ), ExtResource( 67 ), ExtResource( 95 ), ExtResource( 80 ), ExtResource( 94 ), ExtResource( 60 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 100 ), ExtResource( 84 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 113 ), ExtResource( 69 ), ExtResource( 63 ), ExtResource( 108 ), ExtResource( 70 ), ExtResource( 74 ), ExtResource( 89 ), ExtResource( 76 ), ExtResource( 93 ), ExtResource( 65 ), ExtResource( 105 ), ExtResource( 82 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 83 ), ExtResource( 116 ), ExtResource( 66 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 102 ), ExtResource( 64 ), ExtResource( 114 ), ExtResource( 91 ), ExtResource( 62 ), ExtResource( 101 ), ExtResource( 88 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 106 ), ExtResource( 92 ), ExtResource( 111 ), ExtResource( 73 ), ExtResource( 68 ), ExtResource( 75 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 112 ), ExtResource( 115 ), ExtResource( 59 ), ExtResource( 61 ) ],
"loop": false,
"name": "default",
"speed": 6.67
} ]

[node name="Ending" type="AnimatedSprite2D"]
frames = SubResource( 1 )
centered = false
script = ExtResource( 168 )

[node name="PreTime" type="Timer" parent="."]
one_shot = true

[node name="PostTime" type="Timer" parent="."]
one_shot = true

[node name="PreMusic" type="Timer" parent="."]
one_shot = true
